# SpectrumLiveStudio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
SpectrumStudio/: CMakeLists.txt  Info.plist
SpectrumStudio/app/: AppMain.cpp
SpectrumStudio/cmake/: ui-app.cmake
SpectrumStudio/cmake/macos/: AppIcon.icns
src/SpectrumLiveStudio/: CMakeLists.txt
